gen2satvsmettel/softwares/mettel/output/Lukasiewicz/language/Lukasiewicz/LukasiewiczParser.java
// $ANTLR 3.4 output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g 2018-09-13 15:19:55

package Lukasiewicz.language.Lukasiewicz;

import java.util.Collection;
import java.util.ArrayList;
import java.util.LinkedHashSet;

import mettel.core.tableau.MettelGeneralTableauRule;
import mettel.core.language.MettelAbstractLogicParser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/**
 * This file is generated by MetTeL v2
 * which is designed and implemented
 * by Dmitry Tishkovsky.
 */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class LukasiewiczParser extends MettelAbstractLogicParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "ID_DIGIT", "INT", "LETTER", "WS", "'!'", "'$;'", "'$|'", "'&'", "'('", "')'", "'->'", "'/'", "'F'", "'T'", "'U'", "'priority'", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int COMMENT=4;
    public static final int ID=5;
    public static final int ID_DIGIT=6;
    public static final int INT=7;
    public static final int LETTER=8;
    public static final int WS=9;

    // delegates
    public MettelAbstractLogicParser[] getDelegates() {
        return new MettelAbstractLogicParser[] {};
    }

    // delegators


    public LukasiewiczParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LukasiewiczParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return LukasiewiczParser.tokenNames; }
    public String getGrammarFileName() { return "output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g"; }


    public Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
           throws RecognitionException{
        MismatchedTokenException e = new MismatchedTokenException(ttype, input);
        reportError(e);
        throw e;
    }
    private LukasiewiczObjectFactory factory = LukasiewiczObjectFactory.DEFAULT;
    public LukasiewiczParser(TokenStream input, LukasiewiczObjectFactory factory){
        this(input);
        this.factory = factory;
    }
    public LukasiewiczParser(TokenStream input, RecognizerSharedState state, LukasiewiczObjectFactory factory){
        this(input,state);
        this.factory = factory;
    }



    // $ANTLR start "valuations"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:49:1: valuations[Collection<Lukasiewicz_valuation> a0] : ( ( (e0= valuation )* ) ( EOF ) ) ;
    public final void valuations(Collection<Lukasiewicz_valuation> a0) throws RecognitionException {
        Lukasiewicz_valuation e0 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:51:2: ( ( ( (e0= valuation )* ) ( EOF ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:52:2: ( ( (e0= valuation )* ) ( EOF ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:52:2: ( ( (e0= valuation )* ) ( EOF ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:53:2: ( (e0= valuation )* ) ( EOF )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:53:2: ( (e0= valuation )* )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:54:3: (e0= valuation )*
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:54:3: (e0= valuation )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==14||(LA1_0 >= 18 && LA1_0 <= 20)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:54:4: e0= valuation
            	    {
            	    pushFollow(FOLLOW_valuation_in_valuations72);
            	    e0=valuation();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    if ( state.backtracking==0 ) {
            	       a0.add(e0);
            	       }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }


            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:61:2: ( EOF )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:61:3: EOF
            {
            match(input,EOF,FOLLOW_EOF_in_valuations90); if (state.failed) return ;

            }


            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "valuations"



    // $ANTLR start "valuationVariable"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:64:1: valuationVariable returns [Lukasiewicz_valuation r0] : (t= ID ) ;
    public final Lukasiewicz_valuation valuationVariable() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Token t=null;

        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:69:2: ( (t= ID ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:70:2: (t= ID )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:70:2: (t= ID )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:70:2: t= ID
            {
            t=(Token)match(input,ID,FOLLOW_ID_in_valuationVariable114); if (state.failed) return r0;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = factory.create_valuationVariable(t.getText());
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuationVariable"



    // $ANTLR start "basic_valuation"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:72:1: basic_valuation returns [Lukasiewicz_valuation r0] : ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) ) ;
    public final Lukasiewicz_valuation basic_valuation() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Lukasiewicz_valuation e0 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:77:2: ( ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:78:2: ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:78:2: ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            else if ( (LA2_0==14) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:79:2: (e0= valuationVariable )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:79:2: (e0= valuationVariable )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:79:3: e0= valuationVariable
                    {
                    pushFollow(FOLLOW_valuationVariable_in_basic_valuation139);
                    e0=valuationVariable();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    }
                    break;
                case 2 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:81:2: ( ( '(' ) (e0= valuation ) ( ')' ) )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:81:2: ( ( '(' ) (e0= valuation ) ( ')' ) )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:82:3: ( '(' ) (e0= valuation ) ( ')' )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:82:3: ( '(' )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:82:4: '('
                    {
                    match(input,14,FOLLOW_14_in_basic_valuation151); if (state.failed) return r0;

                    }


                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:83:3: (e0= valuation )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:83:4: e0= valuation
                    {
                    pushFollow(FOLLOW_valuation_in_basic_valuation161);
                    e0=valuation();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:84:3: ( ')' )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:84:4: ')'
                    {
                    match(input,15,FOLLOW_15_in_basic_valuation167); if (state.failed) return r0;

                    }


                    }


                    }
                    break;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = e0;
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "basic_valuation"



    // $ANTLR start "valuation_true"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:88:1: valuation_true returns [Lukasiewicz_valuation r0] : ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) ) ;
    public final Lukasiewicz_valuation valuation_true() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Lukasiewicz_valuation e00 =null;

        Lukasiewicz_formula e10 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:90:2: ( ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:91:2: ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:91:2: ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==14) ) {
                alt3=1;
            }
            else if ( (LA3_0==19) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:92:2: (e00= basic_valuation )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:92:2: (e00= basic_valuation )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:92:3: e00= basic_valuation
                    {
                    pushFollow(FOLLOW_basic_valuation_in_valuation_true193);
                    e00=basic_valuation();

                    state._fsp--;
                    if (state.failed) return r0;

                    if ( state.backtracking==0 ) {
                      r0 = e00;
                      }

                    }


                    }
                    break;
                case 2 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:99:2: ( ( 'T' ) (e10= formula ) )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:99:2: ( ( 'T' ) (e10= formula ) )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:100:3: ( 'T' ) (e10= formula )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:100:3: ( 'T' )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:100:4: 'T'
                    {
                    match(input,19,FOLLOW_19_in_valuation_true212); if (state.failed) return r0;

                    }


                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:101:3: (e10= formula )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:101:4: e10= formula
                    {
                    pushFollow(FOLLOW_formula_in_valuation_true222);
                    e10=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    if ( state.backtracking==0 ) {
                      r0 = factory.create_true_valuation(e10);
                      }

                    }


                    }
                    break;

            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation_true"



    // $ANTLR start "valuation_unknown"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:110:1: valuation_unknown returns [Lukasiewicz_valuation r0] : ( (e00= valuation_true ) | ( ( 'U' ) (e10= formula ) ) ) ;
    public final Lukasiewicz_valuation valuation_unknown() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Lukasiewicz_valuation e00 =null;

        Lukasiewicz_formula e10 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:112:2: ( ( (e00= valuation_true ) | ( ( 'U' ) (e10= formula ) ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:113:2: ( (e00= valuation_true ) | ( ( 'U' ) (e10= formula ) ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:113:2: ( (e00= valuation_true ) | ( ( 'U' ) (e10= formula ) ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID||LA4_0==14||LA4_0==19) ) {
                alt4=1;
            }
            else if ( (LA4_0==20) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:114:2: (e00= valuation_true )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:114:2: (e00= valuation_true )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:114:3: e00= valuation_true
                    {
                    pushFollow(FOLLOW_valuation_true_in_valuation_unknown255);
                    e00=valuation_true();

                    state._fsp--;
                    if (state.failed) return r0;

                    if ( state.backtracking==0 ) {
                      r0 = e00;
                      }

                    }


                    }
                    break;
                case 2 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:121:2: ( ( 'U' ) (e10= formula ) )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:121:2: ( ( 'U' ) (e10= formula ) )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:122:3: ( 'U' ) (e10= formula )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:122:3: ( 'U' )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:122:4: 'U'
                    {
                    match(input,20,FOLLOW_20_in_valuation_unknown274); if (state.failed) return r0;

                    }


                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:123:3: (e10= formula )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:123:4: e10= formula
                    {
                    pushFollow(FOLLOW_formula_in_valuation_unknown284);
                    e10=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    if ( state.backtracking==0 ) {
                      r0 = factory.create_unknown_valuation(e10);
                      }

                    }


                    }
                    break;

            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation_unknown"



    // $ANTLR start "valuation_false"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:132:1: valuation_false returns [Lukasiewicz_valuation r0] : ( (e00= valuation_unknown ) | ( ( 'F' ) (e10= formula ) ) ) ;
    public final Lukasiewicz_valuation valuation_false() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Lukasiewicz_valuation e00 =null;

        Lukasiewicz_formula e10 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:134:2: ( ( (e00= valuation_unknown ) | ( ( 'F' ) (e10= formula ) ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:135:2: ( (e00= valuation_unknown ) | ( ( 'F' ) (e10= formula ) ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:135:2: ( (e00= valuation_unknown ) | ( ( 'F' ) (e10= formula ) ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||LA5_0==14||(LA5_0 >= 19 && LA5_0 <= 20)) ) {
                alt5=1;
            }
            else if ( (LA5_0==18) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:136:2: (e00= valuation_unknown )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:136:2: (e00= valuation_unknown )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:136:3: e00= valuation_unknown
                    {
                    pushFollow(FOLLOW_valuation_unknown_in_valuation_false317);
                    e00=valuation_unknown();

                    state._fsp--;
                    if (state.failed) return r0;

                    if ( state.backtracking==0 ) {
                      r0 = e00;
                      }

                    }


                    }
                    break;
                case 2 :
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:143:2: ( ( 'F' ) (e10= formula ) )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:143:2: ( ( 'F' ) (e10= formula ) )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:144:3: ( 'F' ) (e10= formula )
                    {
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:144:3: ( 'F' )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:144:4: 'F'
                    {
                    match(input,18,FOLLOW_18_in_valuation_false336); if (state.failed) return r0;

                    }


                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:145:3: (e10= formula )
                    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:145:4: e10= formula
                    {
                    pushFollow(FOLLOW_formula_in_valuation_false346);
                    e10=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    if ( state.backtracking==0 ) {
                      r0 = factory.create_false_valuation(e10);
                      }

                    }


                    }
                    break;

            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation_false"



    // $ANTLR start "valuation"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:154:1: valuation returns [Lukasiewicz_valuation r0] : (e0= valuation_false ) ;
    public final Lukasiewicz_valuation valuation() throws RecognitionException {
        Lukasiewicz_valuation r0 = null;


        Lukasiewicz_valuation e0 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:159:2: ( (e0= valuation_false ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:160:2: (e0= valuation_false )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:160:2: (e0= valuation_false )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:160:2: e0= valuation_false
            {
            pushFollow(FOLLOW_valuation_false_in_valuation380);
            e0=valuation_false();

            state._fsp--;
            if (state.failed) return r0;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = e0;
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation"



    // $ANTLR start "formulas"
    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:162:1: formulas[Collection<Lukasiewicz_formula> a0] : ( ( (e0= formula )* ) ( EOF ) ) ;
    public final void formulas(Collection<Lukasiewicz_formula> a0) throws RecognitionException {
        Lukasiewicz_formula e0 =null;


        try {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:164:2: ( ( ( (e0= formula )* ) ( EOF ) ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:165:2: ( ( (e0= formula )* ) ( EOF ) )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:165:2: ( ( (e0= formula )* ) ( EOF ) )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:166:2: ( (e0= formula )* ) ( EOF )
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:166:2: ( (e0= formula )* )
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:167:3: (e0= formula )*
            {
            // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:167:3: (e0= formula )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID||LA6_0==10||LA6_0==14) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // output/Lukasiewicz/language/Lukasiewicz/Lukasiewicz.g:167:4: e0= formula
            	    {
            	    pushFollow(FOLLOW_formula_in_formulas403);
            	    e0=formula();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    if ( state.backtracking==0 ) {
            	       a0.add(e0);
            	       }

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

